--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
+
 	<body data-sveltekit-preload-data="hover">
+		<style>
+			#webviewer-1 {
+				height: 100vh;
+			}
+		</style>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
